--- a/app/features/support/template/admin_email.html
+++ b/app/features/support/template/admin_email.html
@@ -1,5 +1,7 @@
-{% extends "base_email.html" %} {% block title %}Verify Action{% endblock %} {%
-block content %}
+{% extends "base_email.html" %} 
+{% block title %}New Ticket Notification{% endblock %} 
+
+{% block content %}
 <div class="text-center">
   <h2>New Support Ticket Received</h2>
 </div>
