--- a/app/features/request_form/template/request_form_email.html
+++ b/app/features/request_form/template/request_form_email.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h3>Hello {{username}},</h3>
-<p>Your request for {{website}} has been received and the expected timeline is 2 days.</p>
+<p>Your request for {{website}} has been received, and the expected response timeline is 2 days.</p>
 
 
 <p>Thank you,<br />The Sitelytics Team</p>
