--- a/app/features/leads/template/lead_confirmation.html
+++ b/app/features/leads/template/lead_confirmation.html
@@ -2,7 +2,7 @@
 {% block title %}Thanks for reaching out{% endblock %}
 {% block content %}
 <h2>Thanks for reaching out!</h2>
-<p>Hi {{ lead.name or 'there' }},</p>
+<p>Hi there,</p>
 <p>We have received your email address and have it securely saved. One of our team members will be in touch shortly with relevant information about our product and how it may benefit you.</p>
 
 <p>In the meantime, feel free to reach out if you have any questions.</p>
